BeginnersTutorial/Ingress/ingress-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: my-frontend-namespace
spec:
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: my-frontend-namespace
spec:
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: my-frontend-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: libiamel/docker-k8s:v1
        ports:
        - containerPort: 80
        
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: my-frontend-namespace
spec:
  rules:
  - host: app1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
